[package]
name = "svm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
ndarray = "0.16.1"
argmin = { version = "0.11.0" }
argmin-math = { version = "0.4", features = ["ndarray_latest", "nalgebra_latest"] }
nalgebra = "0.32"

